# TauRunner

./: .gitignore  LICENSE  README.md  beacomcheck.sbatch  decay.py  decay2d.py  main.py  nuFractionCheck.py  pyproject.toml  requirements.txt  setup.py  taudecay.py
.github/workflows/: taurunner-coverage.yml  test-taurunner.yml
ForbiddenMC/: Casino.ipynb  Casino.py  CrossSections.py  gzk_cdf_maker.ipynb  gzk_cdf_phi_spline.npy  main.py  propagate_taus.sh  simulate_GZK.py
ForbiddenMC/.ipynb_checkpoints/: Casino-checkpoint.ipynb
MMC/: mmc.tgz
MMC/MMC/: HISTORY  README  ammc  (+21 more)
MuonPropagate/: Makefile  generate_muons.cpp
PROPOSALsrc/: CMakeLists.txt
TauPropagate/: Makefile  generate_taus.cpp  process_taus.h  resources
TauRunner.jl/: CLAUDE.md  Manifest.toml  Project.toml  README.md
cross_sections/: CC_table.npy  NC_table.npy  nuXS_NC_8-16.npy
docs/: Casino.html  index.html  main.html
examples/: TauRunner_examples.ipynb  cdf_maker.ipynb
notebooks/: TauRunner_examples.ipynb
python/: Casino.py  body.py  chord.py  earth.py  gzk_cdf_phi_spline.npy  main.py  nue_cdf.npy  numu_cdf.npy  propagate_mus.sh  propagate_mus_ALLM.sh  sun.py  track.py
resources/: Casino.ipynb  ahlers2010.csv
scripts/: ks_test_compare.jl  ks_test_julia.jl  ks_test_python.py  plot_cdf_comparison.jl
taurunner/: .ascii_art.txt  Casino.py  __init__.py  earth.py  main.py  propagate_mus.sh  propagate_mus_ALLM.sh  propagate_taus.sh  propagate_taus_ALLM.sh
test/: test_attenuation.py  test_body.py  test_casino.py  test_main_options.py  test_paths.py  test_secondaries.py  test_xsec.py
(+596 files in other folders)
